# libcas

./: .gitignore  Doxyfile.in  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  index.html
autom4te.cache/: output.1  requests  traces.0  traces.1
examples/: loop.c  simple.c
src/: Makefile.am  Makefile.in  cas-int.h  cas.c  cas.h  cas1.c  cas2.c  cascli.c  main.c
tests/: 000-cas1-no.test  003-cas2-invalid_ticket.test  004-cas2-myprinc.test  008-cas1-more-garbage.test  010-cas2-invalid_service.test  011-cas2-invalid_xml.test  Makefile.am  Makefile.in  test000-cas1-no.sh  test001-cas1-myprinc.sh  test002-cas1-garbage.sh  test003-cas2-invalid_ticket.sh  test004-cas2-myprinc.sh  test005-cas2-garbage.sh  test006-cas1-no-connection.sh  test007-cas2-no-connection.sh  test008-cas1-more-garbage.sh  test010-cas2-invalid_service.sh  test011-cas2-invalid_xml.sh  test012-cas2-httpsprinc.sh
