ACLOCAL_AMFLAGS = -I m4 --install
#check_SCRIPTS=$(srcdir)/tests/test000-cas1-no.sh $(srcdir)/tests/test001-cas1-myprinc.sh $(srcdir)/tests/test002-cas1-garbage.sh $(srcdir)/tests/test003-cas2-no.sh $(srcdir)/tests/test004-cas2-myprinc.sh $(srcdir)/tests/test005-cas2-garbage.sh
check_SCRIPTS=$(shell find $(srcdir)/*.sh -type f | sort )
TESTS=${check_SCRIPTS}
EXTRA_DIST=${TESTS}
#TESTS = check_loop1
#check_PROGRAMS = check_loop1
#check_loop1_SOURCES = test013-cas2-loop.c $(top_builddir)/src/cas.h
#check_loop1_CFLAGS = @CHECK_CFLAGS@
#check_loop1_LDADD = $(top_builddir)/src/libcas.la @CHECK_LIBS
